data/derived/fa15/progs/unify/prog3954.ml.out
Characters 52-53:
  | h::t -> t;;
            ^
Error: This expression has type 'a list
       but an expression was expected of type string
